fix favicon route and increase contrast of link

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 :root {
     --bg-color: white;
     --fg-color: #030609;
-    --link-color: #006000;
+    --link-color: #006600;
 }
 
 
